Revert incomplete - fix of bug 566979
Change-Id: I4e3806f51ae8a071ff7831c103b6c2a9e587f750